[gd_scene load_steps=23 format=3 uid="uid://q4tgc2h3q70c"]

[ext_resource type="Script" path="res://enemies/Shooter.gd" id="1_48bqe"]
[ext_resource type="Script" path="res://ModeGame/Components/hurtbox_component.gd" id="2_mbf1n"]
[ext_resource type="Shader" path="res://enemies/enemy.gdshader" id="2_ok8i8"]
[ext_resource type="Texture2D" uid="uid://c5257vhdw14ok" path="res://ModeGame/Sprites/FlyingSnake.png" id="3_a6fbt"]
[ext_resource type="PackedScene" uid="uid://cqhcesc5yq51y" path="res://ModeGame/Attacks/BulletSpawner.tscn" id="3_s338m"]
[ext_resource type="PackedScene" uid="uid://ct3c8xm7pctvm" path="res://ModeGame/Components/Sight.tscn" id="6_mb1f8"]
[ext_resource type="Script" path="res://ModeGame/State/StateMachine.gd" id="7_8hcl6"]
[ext_resource type="Script" path="res://ModeGame/Components/health_component.gd" id="7_kpel3"]
[ext_resource type="Script" path="res://enemies/states/Basic/Hooked.gd" id="8_8e6gk"]
[ext_resource type="Script" path="res://enemies/states/Basic/IdleEnemy.gd" id="9_nooop"]
[ext_resource type="Script" path="res://enemies/states/Shooter/ShooterAttack.gd" id="10_3uvig"]
[ext_resource type="Script" path="res://enemies/states/Shooter/MoveTowardShooter.gd" id="11_3hmbi"]
[ext_resource type="Script" path="res://enemies/states/Basic/Stunned.gd" id="12_cp75w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y3sjg"]
shader = ExtResource("2_ok8i8")
shader_parameter/active = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_53bod"]
size = Vector2(45, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dd0ki"]
size = Vector2(45, 49)

[sub_resource type="Animation" id="Animation_6jy27"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_20dis"]
resource_name = "start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_u5pox"]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3pynt"]
_data = {
"RESET": SubResource("Animation_6jy27"),
"start": SubResource("Animation_20dis"),
"stop": SubResource("Animation_u5pox")
}

[sub_resource type="Animation" id="Animation_nxs3x"]
resource_name = "fly"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xfq7r"]
_data = {
"fly": SubResource("Animation_nxs3x")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_48bqe")

[node name="Shooting" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_y3sjg")
scale = Vector2(2, 2)
texture = ExtResource("3_a6fbt")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_53bod")

[node name="BulletSpawner" parent="." instance=ExtResource("3_s338m")]
position = Vector2(37, -4)

[node name="Sight" parent="." instance=ExtResource("6_mb1f8")]
sight_radius = 50

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("7_kpel3")
max_health = 5

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("2_mbf1n")
health = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_dd0ki")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "player")]
script = ExtResource("7_8hcl6")
initial_state = NodePath("MoveTowardShooter")
player = NodePath("..")
debug = true

[node name="Hooked" type="Node" parent="StateMachine"]
script = ExtResource("8_8e6gk")

[node name="IdleEnemy" type="Node" parent="StateMachine"]
script = ExtResource("9_nooop")

[node name="ShooterAttack" type="Node" parent="StateMachine"]
script = ExtResource("10_3uvig")

[node name="Stunned" type="Node" parent="StateMachine"]
script = ExtResource("12_cp75w")

[node name="MoveTowardShooter" type="Node" parent="StateMachine"]
script = ExtResource("11_3hmbi")

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
libraries = {
"": SubResource("AnimationLibrary_3pynt")
}

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xfq7r")
}
